# android-opencv-cmake

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/joshkryo/opencvjni/: FirstFragment.kt  MainActivity.java  MainActivity.kt  SecondFragment.kt
app/src/main/java/com/joshkryo/opencvjni/adapter/: ImageHolderItem.kt  ImageListAdapter.kt  TestKt.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml  fragment_first.xml  fragment_second.xml  item_img.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
cvlib/: CMakeLists.txt  build.gradle  proguard-rules.pro
cvlib/src/main/: AndroidManifest.xml
cvlib/src/main/cpp/: CMakeLists.txt  OpenCVLib.cpp  OpenCVLibC.c  OpenCvLib.cpp  OpenCvLib.h  cv-lib.cpp  cv-lib.h  cv-native-lib.cpp  native-lib.cpp
cvlib/src/main/java/com/joshkryo/lib/: CVLib4.java  OpenCVLib.java
gradle/wrapper/: gradle-wrapper.properties
